Fixed posters on Safari

--- a/apps/keepadoo/src/app/movies-lists/movie-search-result/movie-search-result.component.scss
+++ b/apps/keepadoo/src/app/movies-lists/movie-search-result/movie-search-result.component.scss
@@ -8,6 +8,7 @@
   img {
     margin-right: 16px;
     width: 100px;
+    max-height: 160px;
     box-shadow: 0 3px 6px #000000;
   }
 
